--- a/Ejecutable/templates/principal.html
+++ b/Ejecutable/templates/principal.html
@@ -14,30 +14,58 @@
     <header>
       <nav>
         <ul>
-          <li><img src="/static/images/ico_TV.png" alt="Blackboard icon" class="tv-icon"> <a href="https://upsjb.blackboard.com/?new_loc=%2Fultra%2Fcourse">Blackboard</a></li>
+          <li>
+            <img
+              src="/static/images/ico_TV.png"
+              alt="Blackboard icon"
+              class="tv-icon"
+            />
+            <a href="https://upsjb.blackboard.com/?new_loc=%2Fultra%2Fcourse"
+              >Blackboard</a
+            >
+          </li>
           <li class="zoom-item">
-            <img class="zoom-icon" src="/static/images/ico_recording.png" alt="Zoom icon">
+            <img
+              class="zoom-icon"
+              src="/static/images/ico_recording.png"
+              alt="Zoom icon"
+            />
             <a href="https://upsjb-edu-pe.zoom.us/" target="_blank">Zoom</a>
           </li>
           <li class="onedrive-item">
-            <img class="onedrive-icon" src="/static/images/ico_cloud.png" alt="Onedrive icon">
-            <a href="https://upsjb-my.sharepoint.com/_layouts/15/MyBraryFirstRun.aspx?FirstRunStage=waiting">Onedrive</a>
+            <img
+              class="onedrive-icon"
+              src="/static/images/ico_cloud.png"
+              alt="Onedrive icon"
+            />
+            <a
+              href="https://upsjb-my.sharepoint.com/_layouts/15/MyBraryFirstRun.aspx?FirstRunStage=waiting"
+              >Onedrive</a
+            >
           </li>
           <li class="correo-item">
-            <img class="correo-icon" src="/static/images/ico_message.png" alt="Correo icon">
+            <img
+              class="correo-icon"
+              src="/static/images/ico_message.png"
+              alt="Correo icon"
+            />
             <a href="https://outlook.office365.com/mail/">Correo</a>
           </li>
           <li class="repositorio-item">
-            <img class="repositorio-icon" src="/static/images/ico_notification.png" alt="Repositorio icon">
+            <img
+              class="repositorio-icon"
+              src="/static/images/ico_notification.png"
+              alt="Repositorio icon"
+            />
             <a href="https://repositorio.upsjb.edu.pe/">Repositorio</a>
           </li>
         </ul>
         <div class="icons">
-          <img src="/static/images/ico_clock.png" alt="Clock icon">
-          <img src="/static/images/ico_help.png" alt="Help icon">
+          <img src="/static/images/ico_clock.png" alt="Clock icon" />
+          <img src="/static/images/ico_help.png" alt="Help icon" />
         </div>
         <div class="user-info">
-          <img src="/static/images/ico_profile.png" alt="imagen">
+          <img src="/static/images/ico_profile.png" alt="imagen" />
           <div class="textos">
             <span>ANGELA.ROJAS</span>
             <span class="header-info">ESTUDIANTE</span>
@@ -55,16 +83,32 @@
             <a href="#" class="inicio"><span>Inicio</span></a>
           </li>
           <li>
-            <a href="https://app.upsjb.edu.pe/tramites/login" target="_blank" class="mis_trámites"><span>Mis Trámites</span></a>
+            <a
+              href="https://app.upsjb.edu.pe/tramites/login"
+              target="_blank"
+              class="mis_trámites"
+              ><span>Mis Trámites</span></a
+            >
           </li>
           <li>
-            <a href="https://campus.upsjb.edu.pe/psp/cs92prd/?cmd=login&languageCd=ESP&" class="pagos_en_linea"><span>Pagos en Línea</span></a>
+            <a
+              href="https://campus.upsjb.edu.pe/psp/cs92prd/?cmd=login&languageCd=ESP&"
+              class="pagos_en_linea"
+              ><span>Pagos en Línea</span></a
+            >
           </li>
           <li>
             <a class="informacion_academica">
-              <span class="dropdown-span" onclick="this.classList.toggle('active');">
+              <span
+                class="dropdown-span"
+                onclick="this.classList.toggle('active');"
+              >
                 Información Académica
-                <img src="/static/images/despliegue.png" alt="Desplegar" class="dropdown-arrow" />
+                <img
+                  src="/static/images/despliegue.png"
+                  alt="Desplegar"
+                  class="dropdown-arrow"
+                />
               </span>
             </a>
             <ul class="submenu">
@@ -76,10 +120,18 @@
             </ul>
           </li>
           <li>
-            <a href="https://intranet.upsjb.edu.pe/intranet/encuestas-biblioteca" class="portal_de_biblioteca"><span>Portal de Biblioteca</span></a>
+            <a
+              href="https://intranet.upsjb.edu.pe/intranet/encuestas-biblioteca"
+              class="portal_de_biblioteca"
+              ><span>Portal de Biblioteca</span></a
+            >
           </li>
           <li>
-            <a href="https://account.activedirectory.windowsazure.com/ChangePassword.aspx?BrandContextID=O365&ruO365=" class="cambiar_mi_contraseña"><span>Cambiar Mi Contraseña</span></a>
+            <a
+              href="https://account.activedirectory.windowsazure.com/ChangePassword.aspx?BrandContextID=O365&ruO365="
+              class="cambiar_mi_contraseña"
+              ><span>Cambiar Mi Contraseña</span></a
+            >
           </li>
         </ul>
       </aside>
@@ -91,55 +143,60 @@
           </h2>
         </div>
         <div class="cards">
-          <div class="card">
+          <div class="card requisitos">
             <h2>Requisitos</h2>
             <p>Conoce qué requisitos tienes pendientes</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card tramites">
             <h2>Mis Trámites</h2>
             <p>Conoce tus trámites disponibles</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card pagos">
             <h2>Pagos en Línea</h2>
             <p>Conoce tus pagos pendientes</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card horario">
             <h2>Mi Horario</h2>
             <p>Conoce tu horario de clases</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card calificaciones">
             <h2>Mis Calificaciones</h2>
             <p>Conoce tus calificaciones</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card record_academico">
             <h2>Mi Record Académico</h2>
             <p>Conoce tu record académico</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card notas_aprobadas">
             <h2>Mis Notas Aprobadas</h2>
             <p>Conoce tus notas aprobadas</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card actualizar_datos">
             <h2>Actualizar Mis Datos</h2>
             <p>Actualiza tu información</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card fotocheck">
             <h2>Fotocheck</h2>
             <p>Revisa tu fotocheck virtual</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
           </div>
-          <div class="card">
+          <div class="card portal_biblioteca">
             <h2>Portal de Biblioteca</h2>
             <p>Visita el Portal de Biblioteca</p>
-            <button>Ir a conocer</button>
+            <button><span>Ir a conocer</span></button>
+          </div>
+          <div class="card inscripcion">
+            <h2>Inscripción</h2>
+            <p>Cursos Vacacionales</p>
+            <button><span>Ir a conocer</span></button>
           </div>
         </div>
       </main>
