--- a/Ejecutable/templates/principal.html
+++ b/Ejecutable/templates/principal.html
@@ -171,7 +171,7 @@
           <div class="card record_academico">
             <h2>Mi Record Académico</h2>
             <p>Conoce tu record académico</p>
-            <button><span>Ir a conocer</span></button>
+            <button onclick="location.href='{% url 'record_academico' %}'"><span>Ir a conocer</span></button>
           </div>
           <div class="card notas_aprobadas">
             <h2>Mis Notas Aprobadas</h2>
